improving the design

--- a/public/css/sample.css
+++ b/public/css/sample.css
@@ -1,7 +1,4 @@
-.cont{
-    border: 1px solid rgb(218, 220, 215);
-    height: 25ch;
-}
+
 
 ::placeholder{
     font-size: 1em;
@@ -10,3 +7,13 @@
 p{
     font-size: 0.4cm;
 }
+
+.este {
+    border: 1px solid rgb(218, 220, 215);
+    height: 5em;
+    line-height: 1em;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    border: 1px solid;
+  }
